# amundsen-sea-low-index

./: .gitignore  Amundsen_Sea_Low.ipynb  Amundsen_Sea_Low_Index_v3.ipynb  Amundsen_Sea_Low_Index_v3_OLD.ipynb  CITATION.cff  LICENSE  README.md  asli_era5_v3-latest.csv  asli_v3.py  asli_v3_era-interim.csv  asli_v3_era5.csv  environment.yml  pyproject.toml  requirements.txt  untitled.ipynb
.github/workflows/: tests.yml
.ipynb_checkpoints/: Amundsen_Sea_Low-checkpoint.ipynb  Amundsen_Sea_Low_Index_v3-checkpoint.ipynb  Untitled-checkpoint.ipynb
asli/: asli.py  data.py  plot.py  utils.py
asli_v3_era5/: asli_v3_era5.csv
data/: get_era5_monthly.py  invariant.nc
docs/: _config.yml  _toc.yml  api.rst
docs/notebooks/: calculate_Amundsen_Sea_Low_Index.ipynb
notebooks/: Amundsen_Sea_Low_Index_v3.ipynb  calculate_Amundsen_Sea_Low_Index.ipynb
src/asli/: __init__.py  asli.py  data.py  params.py  plot.py  utils.py
src/asli/templates/: asli_data.csv.template
tests/: test_data.py
v3/: asli_plots.py  asli_v3.py  csv_header_asli_v3.txt  plot_asli_timeseries.py
v3/.ipynb_checkpoints/: compare_asl_indices-checkpoint.ipynb
v3/era-interim/: all_lows_v3.20200107-era-interim.csv  asli_v3.20200107-era-interim.csv
v3/era5/: all_lows_era5_v3.20200103.csv  all_lows_monthly_v3.20210820-era5.csv  all_lows_v3.20200107-era5.csv  all_lows_v3.20210820-era5.csv  asli_era5_v3-latest.csv  asli_monthly_v3.20210820-era5.csv  asli_v3.20200107-era5.csv  asli_v3_era5.csv
